--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
 <div class="alert alert-info shadow-lg mt-6" role="alert">
     <div class="w-full">
         <h3 class="font-bold text-2xl">
-            {{ score }}% Euro-Plausible
+            {{ score }}% Plausible
             {% if score > 70 %}
             <span class="badge badge-success ml-2">Approved!</span>
             {% else %}
