--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,7 @@
                 target="_blank" rel="noopener">TraLitA</a>
             (Transliterationsassistent),
             a BAMF tool for standardising Arabic-to-Latin name transliteration and analysing name frequency
-            distributions
-            (official description in BAMF EMN study, p. 41).
+            distributions.
             <br><br>
             More (very scarse) details via public FOI requests on FragDenStaat.de:
             <a class="underline hover:text-indigo-300"
